force-app/main/default/objects/User/fields/Admin_Role__c.field-meta.xml
<CustomField>
    <fullName>Admin_Role__c</fullName>
    <defaultValue>Standard User</defaultValue>
    <label>Admin Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Admin</fullName>
            </value>
            <value>
                <fullName>Support Admin</fullName>
            </value>
            <value>
                <fullName>Config Admin</fullName>
            </value>
            <value>
                <fullName>Analytics Only</fullName>
            </value>
            <value>
                <fullName>Standard User</fullName>
                <default>true</default>
                <label>Standard User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>