force-app/main/default/objects/User/fields/Feature_License_Missing__c.field-meta.xml
<CustomField>
    <fullName>Feature_License_Missing__c</fullName>
    <label>Feature License Missing</label>
    <type>Checkbox</type>
</CustomField>