force-app/main/default/objects/User/fields/Is_Deactivation_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Is_Deactivation_Candidate__c</fullName>
    <label>Is Deactivation Candidate</label>
    <type>Checkbox</type>
</CustomField>