force-app/main/default/objects/User/fields/Last_Security_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Security_Review__c</fullName>
    <label>Last Security Review</label>
    <type>Date</type>
</CustomField>