force-app/main/default/objects/User/fields/Login_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Login_Source_Category__c</fullName>
    <defaultValue>Unknown</defaultValue>
    <label>Login Source Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VPN</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>