force-app/main/default/objects/User/fields/Requires_Login_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Login_Review__c</fullName>
    <label>Requires Login Review</label>
    <type>Checkbox</type>
</CustomField>