force-app/main/default/objects/User/fields/Training_Progress__c.field-meta.xml
<CustomField>
    <fullName>Training_Progress__c</fullName>
    <label>Training Progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>